--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
-web:
-  image: nginx
-  volumes:
-   - ./www:/var/www
-  ports:
-   - "8080:80"
+version: '3'
+services:
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile.prod
