--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,3 +4,15 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.prod
+  supabase-db:
+    image: 'supabase/postgres:15.6.1.146'
+    healthcheck:
+      test: 'pg_isready -U postgres -h 127.0.0.1'
+      interval: 5s
+      timeout: 5s
+      retries: 10
+    depends_on:
+      supabase-vector:
+        condition: service_healthy
+    ports:
+      - ${POSTGRES_PORT:-5432}:${POSTGRES_PORT:-5432}
