--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -9,3 +9,4 @@ COPY ./web /usr/share/nginx/html
 EXPOSE 80
 
 # Start NGINX (this is the default behavior, no CMD or ENTRYPOINT needed)
+HEALTHCHECK  --interval=10s --timeout=3s CMD curl http://localhost:80 || exit 1
